--- a/index.html
+++ b/index.html
@@ -47,17 +47,12 @@
                     class="link-estacio"><em>UNIVERSIDADE ESTÁCIO DE SÁ - UNESA</em></a> 💙</p>
 
             <ul class="rede-social">
+
                 <li>
-                    <a href="https://www.linkedin.com/in/andersonsilva-developer" title="Ir para o LinkedIn"
+                    <a href="https://www.linkedin.com/in/anderson-silva-developer" title="Ir para o LinkedIn"
                         target="_blank" rel="external">
                         <i class="fab fa-linkedin-in"></i>
                         <!-- Estamos usando uma biblioteca css importada, por isso não se faz necessário uma imagem para colocar na logo -->
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://wa.me/5585989728040?text=Ol%C3%A1%20Anderson,%20gostaria%20de%20conhecer%20um%20pouco%20mais%20sobre%20seu%20trabalho." target="_blank">
-                        <i class="fab fa-whatsapp"></i>
                     </a>
                 </li>
 
@@ -68,12 +63,34 @@
                     </a>
                 </li>
 
+                
+                <li>
+                    <a href="https://www.youtube.com/@Anderson-dev360" title="Ir para o instagram" target="_blank"
+                        rel="external">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://wa.me/5585989728040?text=Ol%C3%A1%20Anderson,%20gostaria%20de%20conhecer%20um%20pouco%20mais%20sobre%20seu%20trabalho." target="_blank">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </li>
+            
                 <li>
                     <a href="https://www.instagram.com/anderson_silva_developer/" title="Ir para o instagram" target="_blank"
                         rel="external">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </li>
+
+                <li>
+                    <a href="mailto:anderson.developer360@gmail.com.br" title="Ir para o instagram" target="_blank"
+                        rel="external">
+                        <i class="fa fa-envelope"></i>
+                    </a>
+                </li>
+
             </ul>
         </div>
 
